[gd_scene load_steps=2 format=3 uid="uid://csvfwglbsd8g8"]

[ext_resource type="Script" path="res://ui/generator_settings_window.gd" id="1_mxi1h"]

[node name="GeneratorSettingsWindow" type="Window"]
initial_position = 1
size = Vector2i(300, 267)
wrap_controls = true
script = ExtResource("1_mxi1h")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="GenerateButton" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Generate"

[node name="Seed" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Seed"]
layout_mode = 2
text = "Seed"

[node name="SpinBox" type="SpinBox" parent="ScrollContainer/VBoxContainer/Seed"]
layout_direction = 3
layout_mode = 2
max_value = 1.0
rounded = true
allow_greater = true
alignment = 2
update_on_text_changed = true

[node name="random" type="Button" parent="ScrollContainer/VBoxContainer/Seed"]
layout_mode = 2
text = "ðŸŽ²"

[node name="WorldSize" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/WorldSize"]
layout_mode = 2
text = "World size
"

[node name="SpinBox" type="SpinBox" parent="ScrollContainer/VBoxContainer/WorldSize"]
layout_direction = 3
layout_mode = 2
max_value = 999999.0
value = 32.0
rounded = true
alignment = 2
update_on_text_changed = true

[node name="Elev" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Elevation correction"

[node name="ElevationCorr" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="HSlider" type="HSlider" parent="ScrollContainer/VBoxContainer/ElevationCorr"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -1.0
max_value = 1.0
step = 0.01
value = 0.45

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/ElevationCorr"]
layout_mode = 2
text = "0.45
"

[node name="Label3" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Elevation frequency"

[node name="ElevationFreq" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="HSlider" type="HSlider" parent="ScrollContainer/VBoxContainer/ElevationFreq"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 0.1
step = 0.001
value = 0.05

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/ElevationFreq"]
layout_mode = 2
text = "0.45
"

[node name="Label4" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Elevation lacunarity
"

[node name="ElevationLac" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="HSlider" type="HSlider" parent="ScrollContainer/VBoxContainer/ElevationLac"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.45

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/ElevationLac"]
layout_mode = 2
text = "0.45
"

[node name="Label5" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Elevation octaves
"

[node name="ElevationOctaves" type="SpinBox" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
value = 3.0

[node name="Hum" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label7" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Humidity frequency
"

[node name="HumidityFreq" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="HSlider" type="HSlider" parent="ScrollContainer/VBoxContainer/HumidityFreq"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 0.1
step = 0.001
value = 0.05

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/HumidityFreq"]
layout_mode = 2
text = "0.45
"

[node name="Label8" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Humidity lacunarity
"

[node name="HumidityLac" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="HSlider" type="HSlider" parent="ScrollContainer/VBoxContainer/HumidityLac"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.45

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/HumidityLac"]
layout_mode = 2
text = "0.45
"

[node name="Label9" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Humidity octaves
"

[node name="HumidityOctaves" type="SpinBox" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
value = 3.0

[connection signal="pressed" from="ScrollContainer/VBoxContainer/GenerateButton" to="." method="_on_generate_button_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Seed/random" to="." method="_on_random_pressed"]
[connection signal="value_changed" from="ScrollContainer/VBoxContainer/ElevationCorr/HSlider" to="." method="_on_elevation_corr_h_slider_value_changed"]
[connection signal="value_changed" from="ScrollContainer/VBoxContainer/ElevationFreq/HSlider" to="." method="_on_elevation_freq_h_slider_value_changed"]
[connection signal="value_changed" from="ScrollContainer/VBoxContainer/ElevationLac/HSlider" to="." method="_on_elevation_lac_h_slider_value_changed"]
[connection signal="value_changed" from="ScrollContainer/VBoxContainer/HumidityFreq/HSlider" to="." method="_on_humidity_freq_h_slider_value_changed"]
[connection signal="value_changed" from="ScrollContainer/VBoxContainer/HumidityLac/HSlider" to="." method="_on_humidity_lac_h_slider_value_changed"]
